--- a/resources/kosen_clock/template/base.html
+++ b/resources/kosen_clock/template/base.html
@@ -22,7 +22,9 @@
     </header>
 {% block body %}{% endblock %}
     <footer style="background-color:gray">
-    <p>高専時計は舞鶴工業高等専門学校 電気情報工学科 E-project (電気情報工学科のスペシャリスト達によるアクロバット集団)によって運営されてます。</p>
+        <div class="container">
+            <p>高専時計は舞鶴工業高等専門学校 電気情報工学科 E-project (電気情報工学科のスペシャリスト達によるアクロバット集団)によって運営されてます。</p>
+        </div>
     </footer>
 </body>
 </html>
