--- a/resources/kosen_clock/template/list.html
+++ b/resources/kosen_clock/template/list.html
@@ -2,5 +2,7 @@
 {% block title %}高専時計一覧{% endblock %}
 {% block list %}class="active"{% endblock %}
 {% block body %}
-    <p>Will show images list.</p>
+    <div class="container">
+        <p>Will show images list.</p>
+    </div>
 {% endblock %}
