--- a/resources/kosen_clock/public/css/style.css
+++ b/resources/kosen_clock/public/css/style.css
@@ -1,3 +1,7 @@
+p {
+    font-size: 16px !important;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -27,7 +31,7 @@ body {
     width: 100vw;
     text-align: center;
     vertical-align: middle;
-    background-color:white;
+    background-color:black;
     margin: auto;
 }
 
