--- a/resources/kosen_clock/template/non-upload.html
+++ b/resources/kosen_clock/template/non-upload.html
@@ -1,4 +1,4 @@
-{% extends "template/base.html" %}
+{% extends "template/upload.html" %}
 {% block title %}高専時計アップロード{% endblock %}
 {% block body %}
 <body>
