--- a/resources/kosen_clock/template/root.html
+++ b/resources/kosen_clock/template/root.html
@@ -7,7 +7,10 @@
         <img src="{{access-root}}/img/{{global-last-upload-image}}" class="my-img">
     </div>
     </div>
-    <div>
-    <p>高専時計は 高専祭 に関わるすべての人の姿を写した、高専版美人時計です。来ていただいた方々にも参加していただき、より盛り上げて頂ければと考えています。また、高専時計へ参加すると何かいいものがもらえるかも…?</p>
-    <a href="{{access-root}}/upload" >アップロードページ</a>
+    <div class="container">
+        <h2 class="text-center">高専時計とは</h2>
+        <p>高専時計は 高専祭 に関わるすべての人の姿を写した、高専版美人時計です。来ていただいた方々にも参加していただき、より盛り上げて頂ければと考えています。また、高専時計へ参加すると何かいいものがもらえるかも…?</p>
+
+        <a href="{{access-root}}/upload" >アップロードページ</a>
+    </div>
 {% endblock %}
