--- a/resources/kosen_clock/template/base.html
+++ b/resources/kosen_clock/template/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{{access-root}}/css/bootstrap.css" rel="stylesheet"/>
+    <link href="{{access-root}}/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="{{access-root}}/js/bootstrap.min.js"></script>
     <link href="{{access-root}}/css/style.css" rel="stylesheet"/>
