be able to move clock

--- a/resources/kosen_clock/template/base.html
+++ b/resources/kosen_clock/template/base.html
@@ -23,6 +23,7 @@
 {% block body %}{% endblock %}
     <footer style="background-color:gray">
         <div class="container">
+            <p>© 2017 E project.</p>
             <p>高専時計は舞鶴工業高等専門学校 電気情報工学科 E-project (電気情報工学科のスペシャリスト達によるアクロバット集団)によって運営されてます。</p>
         </div>
     </footer>
