--- a/resources/kosen_clock/public/css/style.css
+++ b/resources/kosen_clock/public/css/style.css
@@ -35,6 +35,21 @@ body {
     margin: auto;
 }
 
+.grid-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 0;
+}
+
+.grid-img img {
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
 @media only screen and (max-width:565px) {
 .my-screen {
     height: calc(100vh - 125px);
